--- a/src/main/webapp/approve_use_or_borrow.html
+++ b/src/main/webapp/approve_use_or_borrow.html
@@ -159,25 +159,66 @@
     });
 </script>
 <script>
-    const dataSet = [
-        ['id', 'aaa', 'bb', '30', 'xxxx-xx', 'aaa', 'bb',  'xxxx-xx','1'],
-        ['id1', 'aaa1', 'cc', '20', 'xxxx-xx', 'aaa', 'bb',  'xxxx-xx','2'],
-        ['id2', 'aaa', 'bb', '30', 'xxxx-xx', 'aaa', 'bb',  'xxxx-xx','3'],
-        ['id3', 'aaa1', 'cc', '20', 'xxxx-xx', 'aaa', 'bb',  'xxxx-xx','0'],
-        ['id4', 'aaa', 'bb', '30', 'xxxx-xx', 'aaa', 'bb',  'xxxx-xx','1'],
-        ['id5', 'aaa1', 'cc', '20', 'xxxx-xx', 'aaa', 'bb',  'xxxx-xx','2'],
-        ['id6', 'aaa', 'bb', '30', 'xxxx-xx', 'aaa', 'bb',  'xxxx-xx','3'],
-        ['id7', 'aaa1', 'cc', '20', 'xxxx-xx','aaa', 'bb',  'xxxx-xx', '0'],
-        ['id8', 'aaa', 'bb', '30', 'xxxx-xx', 'aaa', 'bb', 'xxxx-xx','3'],
-        ['id9', 'aaa1', 'cc', '20', 'xxxx-xx', 'aaa', 'bb',  'xxxx-xx','2'],
-    ];
-    const dataSets = [
-        ['aaa1', '规格1', '20', '单位', 'fenlei', '10.0', '2000-12-24', '300', '20', '1hao', 'beizhu1'],
-        ['aaa2', '规格', '20', '单位', 'fenlei', '10.0', '2000-12-24', '300', '20', '1hao', 'beizhu2'],
-        ['aaa3', '规格1', '20', '单位', 'fenlei', '10.0', '2000-12-24', '300', '20', '1hao', 'beizhu3'],
-        ['aaa4', '规格', '20', '单位', 'fenlei', '10.0', '2000-12-24', '300', '20', '1hao', 'beizhu4'],
-        ['aaa5', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu5']
-    ];
+    var temp_user_id;
+    var temp_data;
+
+    console.log("--flag-1-");
+
+    $.ajax({
+        async: false,
+        type : "post",
+        url : "user/findOne",
+        success : function(user) {
+            console.log("--flag-findOne-");
+            temp_user_id = user.user_id;
+            console.log("user.user_id"+user.user_id);
+        }
+    });
+
+    // 初始化，获取首页表格数据
+    $.ajax({
+        async: false,
+        data: {},
+        type : "post",
+        url : "approve/initBorrowTable",
+        success : function(data) {
+            console.log("--flag-inittable-");
+            temp_data=data.data;
+        }
+    });
+
+    function json2Array(jsonData, list_or_not) {
+        var jsonsString = jsonData.slice(1, jsonData.length - 1);
+        var jsonStrings = jsonsString.split("},");
+        var length = jsonStrings.length;
+        var jsons = [];
+        for (var i = 0; i !== length-1; ++i) {
+            jsonStrings[i] += '}';
+        }
+        var source = [[]];
+        for (var i = 0; i !== length; ++i) {
+            //console.log("$"+jsonStrings[i]);
+            jsons[i] = eval('(' + jsonStrings[i] + ')');
+            var data = [];
+            for(var key in jsons[i]) {
+                if(i === 0) {
+                    source[0].push(key);
+                }
+                //console.log("i="+i+"|key="+key+"|json[i,key]="+jsons[i][key]);
+                if(!list_or_not || key !== "object_id" ) {
+                    data.push(jsons[i][key]);
+                } else {
+                    console.log("跳过在执行一次")
+                }
+            }
+            source.push(data);
+        }
+        return source.slice(1); //删除第1行
+    }
+    //console.log("temp_data=\n"+temp_data);
+    temp_data = json2Array(temp_data, false)  // 主表格数据
+
+    const dataSets = [];
     $(document).ready(function() {
         $(function(){
             var table = $('#table').DataTable({
@@ -379,19 +420,20 @@
                     if(confirm('确认审核通过？')){  //确认提交
                         // 拼后端BeanUtils所需的map串
                         var front_end_data = "";
-                        if (tds[0].innerText !== "") front_end_data += "purchase_requisition_id="+tds[0].innerText+"&";
-                        if (tds[1].innerText !== "") front_end_data += "purchase_order_id="+tds[1].innerText+"&";
-                        if (tds[3].innerText !== "") front_end_data += "purpose="+tds[3].innerText+"&";
-                        if (tds[4].innerText !== "") front_end_data += "requisition_date="+tds[4].innerText+"&";
-                        if (tds[5].innerText !== "") front_end_data += "&state="+tds[5].innerText+"&";
-                        if (tds[6].innerText !== "") front_end_data += "&approval_user_id="+tds[6].innerText+"&";
-                        if (tds[7].innerText !== "") front_end_data += "&approval_opinions="+tds[7].innerText+"&";
-                        if (tds[8].innerText !== "") front_end_data += "&approval_date="+tds[8].innerText+"&";
-                        // front_end_data = front_end_data.substring(0, front_end_data.length-1);  //删除最后一个字符
+                        if (tds[0].innerText !== "") front_end_data += "get_or_borrow_requisition_id="+tds[0].innerText+"&";
+                        // if (tds[1].innerText !== "") front_end_data += "purchase_order_id="+tds[1].innerText+"&";
+                        // if (tds[3].innerText !== "") front_end_data += "purpose="+tds[3].innerText+"&";
+                        // if (tds[4].innerText !== "") front_end_data += "requisition_date="+tds[4].innerText+"&";
+                        if (tds[5].innerText !== "") front_end_data += "state="+2+"&";
+                        if (tds[6].innerText !== "") front_end_data += "approval_user_id="+temp_user_id+"&";
+                        if (tds[7].innerText !== "") front_end_data += "approval_opinions="+tds[7].innerText+"&";
+                        if (tds[8].innerText !== "") front_end_data += "approval_date="+tds[8].innerText+"&";
+                        front_end_data = front_end_data.substring(0, front_end_data.length-1);  //删除最后一个字符
 
+                        console.log("front_end_data="+front_end_data);
+                        alert("打开F12看前端发送的数据");
                         $.get("user/findOne", {}, function (data) {
                             // 获取当前登陆的用户id
-                            front_end_data += "requisition_user_id="+data.user_id;
                             console.log("front_end_data="+front_end_data);
                             // 把前端数据传给后端
                             $.post("purchase/createOrUpdateItems", front_end_data, function (data) {
