废弃表单基本完成 剩删除功能未调试＋在考虑要不要删除时间字段

--- a/src/main/webapp/form_purchase.html
+++ b/src/main/webapp/form_purchase.html
@@ -35,12 +35,14 @@
     <div id="page-wrapper" class="gray-bg dashbard-1">
         <!--头部-->
         <div id="header"></div>
+        <!--标题 -->
         <div class="row wrapper border-bottom white-bg page-heading">
             <div class="col-lg-10">
                 <h2>采购申请</h2>
             </div>
             <div class="col-lg-2"></div>
         </div>
+        <!--表单本体 -->
         <div class="wrapper wrapper-content animated fadeInRight">
             <!--                所有表单元素  -->
             <div class="row">
